--- a/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
+++ b/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A1EBFC92-C81D-4A5C-959E-F2FDC48E6B02}</ProjectGuid>
+    <ProjectGuid>{1DEE3090-20BE-4ED3-9AAB-5ACBA2B909E9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OSDevGrp.OSIntranet.Tests</RootNamespace>
-    <AssemblyName>OSDevGrp.OSIntranet.Tests</AssemblyName>
+    <RootNamespace>OSDevGrp.OSIntranet.Infrastructure</RootNamespace>
+    <AssemblyName>OSDevGrp.OSIntranet.Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -48,12 +48,6 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\External references\Castle.Windsor.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\External references\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.IoC">
-      <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.IoC.dll</HintPath>
-    </Reference>
     <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.IoC.Interfaces">
       <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.IoC.Interfaces.dll</HintPath>
     </Reference>
@@ -61,21 +55,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IoC\ConfigurationProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Unittests\Infrastructure\ContainerTests.cs" />
-    <Compile Include="Unittests\Infrastructure\IntranetBusinessExceptionTests.cs" />
-    <Compile Include="Unittests\Infrastructure\IntranetRepositoryExceptionTests.cs" />
-    <Compile Include="Unittests\Infrastructure\IntranetSystemExceptionTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="OSDevGrp.OSIntranet.snk" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OSDevGrp.OSIntranet.Infrastructure.Interfaces\OSDevGrp.OSIntranet.Infrastructure.Interfaces.csproj">
       <Project>{E510F652-6E85-402E-9EFF-474841121181}</Project>
       <Name>OSDevGrp.OSIntranet.Infrastructure.Interfaces</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="OSDevGrp.OSIntranet.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
