--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Tests/App.config
@@ -10,6 +10,7 @@
     <containerConfigurationProviders>
       <clear/>
       <add name="ioc" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Windsor.ConfigurationProvider, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
+      <add name="intranet" type="OSDevGrp.OSIntranet.Infrastructure.IoC.ConfigurationProvider, OSDevGrp.OSIntranet.Infrastructure"/>
     </containerConfigurationProviders>
   </iocConfiguration>
 onfiguration>
