--- a/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
+++ b/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
@@ -63,6 +63,10 @@
       <Project>{E510F652-6E85-402E-9EFF-474841121181}</Project>
       <Name>OSDevGrp.OSIntranet.Infrastructure.Interfaces</Name>
     </ProjectReference>
+    <ProjectReference Include="..\OSDevGrp.OSIntranet.Repositories.Interfaces\OSDevGrp.OSIntranet.Repositories.Interfaces.csproj">
+      <Project>{4775A5D7-009A-4B8D-A9DE-0CEBDFCC1535}</Project>
+      <Name>OSDevGrp.OSIntranet.Repositories.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="OSDevGrp.OSIntranet.snk" />
