--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -17,6 +17,13 @@
 
   <system.serviceModel>
     <bindings>
+      <wsHttpBinding        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                     transactionFlow="true">
+          <security mode="Message">
+            <message clientCredentialType="Certificate"/>
+          </security>
+        </binding>
+      </wsHttpBinding>
       <netNamedPipeBinding        <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalNamedPipeBinding"
                     transactionFlow="true"
                  maxReceivedMessageSize="8388608">
@@ -26,6 +33,26 @@
         </binding>
       </netNamedPipeBinding>
     </bindings>
+    <services      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService"
+               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+           <endpoint address="http://localhost:7000/OSIntranet/FinansstyringRepository"
+               binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+>
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint           <endpoint address="http://localhost:7000/OSIntranet/FinansstyringRepository/mex"
+               binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="IMetadataExchange">
+>
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service       </services>
     <client      <endpoint name="AdresseRepositoryService"
                    address="net.pipe://localhost/OSIntranet/DataAccess/AdresseRepositoryService"
              behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior"
@@ -40,6 +67,16 @@
              contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService"/>
        </client>
     <behaviors>
+      <serviceBehaviors>
+        <behavior name="OSDevGrp.OSIntranet.IoCServiceBehavior">
+          <serviceMetadata httpGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+       <serviceThrottling maxConcurrentCalls="500"
+                             maxConcurrentSessions="10000"
+                             maxConcurrentInstances="100"/>
+>
+        </behavior>
+      </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior">
           <dataContractSerializer maxItemsInObjectGraph="2097152"/>
