--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -60,8 +60,13 @@
     <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.IoC.Interfaces">
       <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.IoC.Interfaces.dll</HintPath>
     </Reference>
+    <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.Wcf, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1719c289d1070527, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.Wcf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,12 +78,17 @@
     <Compile Include="Unittests\Repositories\FinansstyringRepositoryTests.cs" />
     <Compile Include="Unittests\Resources\ResourceExceptionTests.cs" />
     <Compile Include="Unittests\Resources\ResourceTests.cs" />
+    <Compile Include="Unittests\Services\FinansstyringServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="OSDevGrp.OSIntranet.snk" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\OSDevGrp.OSIntranet.Contracts\OSDevGrp.OSIntranet.Contracts.csproj">
+      <Project>{776EB809-1060-4037-A993-2B3E74DF779D}</Project>
+      <Name>OSDevGrp.OSIntranet.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OSDevGrp.OSIntranet.Infrastructure.Interfaces\OSDevGrp.OSIntranet.Infrastructure.Interfaces.csproj">
       <Project>{E510F652-6E85-402E-9EFF-474841121181}</Project>
       <Name>OSDevGrp.OSIntranet.Infrastructure.Interfaces</Name>
@@ -98,6 +108,10 @@
     <ProjectReference Include="..\OSDevGrp.OSIntranet.Resources\OSDevGrp.OSIntranet.Resources.csproj">
       <Project>{EC187CDE-4BB1-4B84-8AAE-1CE461296611}</Project>
       <Name>OSDevGrp.OSIntranet.Resources</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OSDevGrp.OSIntranet.Services\OSDevGrp.OSIntranet.Services.csproj">
+      <Project>{46A9F437-6741-4CB8-B2F5-CFF0A8272C0F}</Project>
+      <Name>OSDevGrp.OSIntranet.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
