--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Tests/App.config
@@ -69,7 +69,8 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="OSDevGrp.OSIntranet.IoCServiceBehavior">
-          <serviceMetadata httpGetEnabled="True"/>
+          <serviceMetadata httpGetEnabled="True" 
+                           httpGetUrl="http://localhost:7000/OSIntranet/FinansstyringRepository/mex"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
        <serviceThrottling maxConcurrentCalls="500"
                              maxConcurrentSessions="10000"
