--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -35,16 +35,16 @@
     </bindings>
     <services      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService"
                behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-           <endpoint address="http://localhost:7000/OSIntranet/FinansstyringRepository"
-               binding="wsHttpBinding"
+        <endpoint address=""
+                  binding="wsHttpBinding"
                   bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
                   contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
 >
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
-        </endpoint           <endpoint address="http://localhost:7000/OSIntranet/FinansstyringRepository/mex"
-               binding="wsHttpBinding"
+        </endpoint        <endpoint address="mex"
+                  binding="wsHttpBinding"
                   bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
                   contract="IMetadataExchange">
 >
@@ -69,10 +69,14 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="OSDevGrp.OSIntranet.IoCServiceBehavior">
-          <serviceMetadata httpGetEnabled="True" 
-                           httpGetUrl="http://localhost:7000/OSIntranet/FinansstyringRepository/mex"/>
+          <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
-       <serviceThrottling maxConcurrentCalls="500"
+          <serviceCredentials            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services"
+                                storeLocation="LocalMachine"
+                                storeName="My"
+                                x509FindType="FindBySubjectName"/>
+>
+          </serviceCredentials          <serviceThrottling maxConcurrentCalls="500"
                              maxConcurrentSessions="10000"
                              maxConcurrentInstances="100"/>
 >
