--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -16,6 +16,14 @@
 
   <system.serviceModel>
     <bindings>
+      <wsHttpBinding>
+        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  transactionFlow="true">
+          <security mode="Message">
+            <message clientCredentialType="Certificate"/>
+          </security>
+        </binding>
+      </wsHttpBinding>
       <netNamedPipeBinding>
         <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalNamedPipeBinding"
                  transactionFlow="true"
@@ -27,6 +35,25 @@
       </netNamedPipeBinding>
     </bindings>
     <services>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService"
+               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address=""
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex"
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service>
     </services>
     <client>
       <endpoint name="AdresseRepositoryService"
@@ -43,11 +70,32 @@
                 contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService"/>
     </client>
     <behaviors>
+      <serviceBehaviors>
+        <behavior name="OSDevGrp.OSIntranet.IoCServiceBehavior">
+          <serviceMetadata httpGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="False"/>
+          <serviceCredentials>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services"
+                                storeLocation="LocalMachine"
+                                storeName="My"
+                                x509FindType="FindBySubjectName"/>
+          </serviceCredentials>
+          <serviceThrottling maxConcurrentCalls="500"
+                             maxConcurrentSessions="10000"
+                             maxConcurrentInstances="100"/>
+          <ioc/>
+        </behavior>
+      </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior">
           <dataContractSerializer maxItemsInObjectGraph="2097152"/>
         </behavior>
       </endpointBehaviors>
     </behaviors>
+    <extensions>
+      <behaviorExtensions>
+        <add name="ioc" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Wcf.IoCInstanceProviderExtension, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
+      </behaviorExtensions>
+    </extensions>
   </system.serviceModel>
 </configuration>
