--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -51,6 +51,10 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Faults\IntranetBusinessFault.cs" />
+    <Compile Include="Faults\IntranetSystemFault.cs" />
+    <Compile Include="Faults\IntranetFaultBase.cs" />
+    <Compile Include="Faults\IntranetRepositoryFault.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\RegnskabslisteGetQuery.cs" />
     <Compile Include="Services\IFinansstyringService.cs" />
