--- a/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
+++ b/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BudgetkontoplanGetQueryHandler.cs" />
+    <Compile Include="BudgetkontoGetQueryHandler.cs" />
+    <Compile Include="KontoGetQueryHandler.cs" />
     <Compile Include="KontoplanGetQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegnskabslisteGetQueryHandler.cs" />
