--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -58,8 +58,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\BudgetkontoGetQuery.cs" />
     <Compile Include="Queries\BudgetkontoplanGetQuery.cs" />
+    <Compile Include="Queries\DebitorlisteGetQuery.cs" />
     <Compile Include="Queries\KontoGetQuery.cs" />
     <Compile Include="Queries\KontoplanGetQuery.cs" />
+    <Compile Include="Queries\KreditorlisteGetQuery.cs" />
     <Compile Include="Queries\RegnskabslisteGetQuery.cs" />
     <Compile Include="Services\IFinansstyringService.cs" />
     <Compile Include="Services\IIntranetService.cs" />
@@ -68,14 +70,17 @@
     <Compile Include="Views\BudgetkontoplanView.cs" />
     <Compile Include="Views\BudgetkontoView.cs" />
     <Compile Include="Views\BudgetoplysningerView.cs" />
+    <Compile Include="Views\DebitorListeView.cs" />
     <Compile Include="Views\KontoBaseView.cs" />
     <Compile Include="Views\KontogruppeView.cs" />
     <Compile Include="Views\KontoplanView.cs" />
     <Compile Include="Views\KontoView.cs" />
     <Compile Include="Views\KreditoplysningerView.cs" />
+    <Compile Include="Views\KreditorlisteView.cs" />
     <Compile Include="Views\MånedsoplysningerView.cs" />
     <Compile Include="Views\RegnskabslisteView.cs" />
     <Compile Include="Views\TabelView.cs" />
+    <Compile Include="Views\TelefonlisteView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OSDevGrp.OSIntranet.snk" />
